--- a/src/pages/[slug].astro
+++ b/src/pages/[slug].astro
@@ -64,6 +64,7 @@ const { Content }: any = await post.render();
     display: flex;
     gap: 0.5rem;
     flex-wrap: wrap;
+    width: min-content;
   }
 
   .post-content {
