--- a/src/components/YoutubeEmbed.astro
+++ b/src/components/YoutubeEmbed.astro
@@ -3,8 +3,8 @@ const { id, title = "YouTube Video" } = Astro.props;
 ---
 
 <iframe
-  width="560"
-  height="315"
+  width="100%"
+  height="440"
   src={`https://www.youtube.com/embed/${id}`}
   title={title}
   frameborder="0"
