fix: logo in nav

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -248,7 +248,7 @@ const {
             <nav class="nav-links">
               <a href="/"
                 ><img
-                  src="logo 8bit beard.webp"
+                  src="/logo 8bit beard.webp"
                   alt="codex barbas"
                   class="title-logo"
                 /></a
