feat: analytics base script

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -44,6 +44,10 @@ const {
       href="https://fonts.googleapis.com/css2?family=VT323&display=swap"
       rel="stylesheet"
     />
+    <script
+      defer
+      data-domain="codex-barba.com"
+      src="https://plausible.io/js/script.js"></script>
     <style>
       html,
       body {
