--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -78,4 +78,11 @@ const posts = allPosts.sort((a, b) => {
   .post-card a {
     margin-top: auto;
   }
+
+  @media (max-width: 676px) {
+    .nes-container {
+      padding: 1.5rem 0;
+      border-color: transparent;
+    }
+  }
 </style>
