--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -58,4 +58,11 @@ const posts = await getCollection("posts");
     height: auto;
     vertical-align: baseline;
   }
+
+  @media (max-width: 676px) {
+    .nes-container {
+      padding: 1.5rem 0;
+      border-color: transparent;
+    }
+  }
 </style>
