--- a/src/components/YoutubeEmbed.astro
+++ b/src/components/YoutubeEmbed.astro
@@ -2,12 +2,27 @@
 const { id, title = "YouTube Video" } = Astro.props;
 ---
 
-<iframe
-  width="100%"
-  height="440"
-  src={`https://www.youtube.com/embed/${id}`}
-  title={title}
-  frameborder="0"
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-  allowfullscreen
-  loading="lazy"></iframe>
+<div class="youtube-embed">
+  <iframe
+    width="100%"
+    height="440"
+    src={`https://www.youtube.com/embed/${id}`}
+    title={title}
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen
+    loading="lazy"></iframe>
+</div>
+
+<style>
+  .youtube-embed {
+    aspect-ratio: 16 / 9;
+    max-width: 800px;
+    width: 100%;
+  }
+  .youtube-embed iframe {
+    width: 100%;
+    height: 100%;
+    border: none;
+  }
+</style>
