feat: contribution instructions

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -33,6 +33,25 @@ import SideMenu from "../components/SideMenu.astro";
       </ul>
     </div>
 
+    <div class="character-section">
+      <div class="nes-balloon from-right is-dark">
+        <h3>¿Quieres colaborar con el proyecto?</h3>
+        <p>
+          Puedes contribuir con el proyecto haciendo un fork del repo de GitHub:
+          <a
+            href="https://github.com/pedrovelasquez9/codex-barba"
+            target="_blank"
+            rel="noopener noreferrer"
+          >
+            Ir al repo de Codex Barba
+          </a>
+        </p>
+      </div>
+      <div>
+        <i class="nes-octocat animate"></i>
+      </div>
+    </div>
+
     <a href="/" class="nes-btn back-btn">← Ir al inicio</a>
   </section>
 </BaseLayout>
