feat/C sharp start project

--- a/src/components/SideMenu.astro
+++ b/src/components/SideMenu.astro
@@ -15,6 +15,7 @@ type ProgrammingCategory =
   | "Vue"
   | "Astro"
   | "Node.js"
+  | "Net C#"
   | "Soft skills"
   | "Documentación de Software"
   | "Algoritmos y Estructuras de Datos"
@@ -46,6 +47,7 @@ function getCategoryFromTags(
     vue: "Vue",
     astro: "Astro",
     nodejs: "Node.js",
+    netcsharp: "Net C#",
     "soft skills": "Soft skills",
     "documentación de software": "Documentación de Software",
     "algoritmos y estructuras de datos": "Algoritmos y Estructuras de Datos",
@@ -76,6 +78,7 @@ const allCategories: ProgrammingCategory[] = [
   "Vue",
   "Astro",
   "Node.js",
+  "Net C#",
   "Soft skills",
   "Documentación de Software",
   "Algoritmos y Estructuras de Datos",
@@ -119,6 +122,7 @@ const categoryColors: Record<
   Vue: { bg: "#42b883", text: "#ffffff" },
   Astro: { bg: "#ff5c00", text: "#ffffff" },
   "Node.js": { bg: "#8cc84b", text: "#ffffff" },
+  "Net C#": { bg: "#db03fc", text: "#ffffff" },
   "Soft skills": { bg: "#f9c74f", text: "#000000" },
   "Documentación de Software": { bg: "#f94144", text: "#ffffff" },
   "Algoritmos y Estructuras de Datos": { bg: "#577590", text: "#ffffff" },
